--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Social links profile</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
+    <link rel="stylesheet" href="styles/desktop.css" />
+    <title>Frontend Mentor | Social links profile</title>
+  </head>
+  <body>
+    <section class="card-container">
+      <div class="card">
+        <img src="/assets/images/avatar-jessica.jpeg" alt="Jessica's Photo" class="profile-image" />
+        <h3 class="title-name">Jessica Randall</h3>
+        <p class="location">London, United Kingdom</p>
+        <p class="about-me">"Front-End developer and an avid reader."</p>
+        <div class="links-container">
+          <a href="#" class="social-media-link">GitHub</a>
+          <a href="#" class="social-media-link">Frontend Mentor</a>
+          <a href="#" class="social-media-link">LinkedIn</a>
+          <a href="#" class="social-media-link">Twitter</a>
+          <a href="#" class="social-media-link">Instagram</a>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
